--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
+body{
+    background-color: rgb(117, 197, 171);
+    color: black;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
